--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,7 +51,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=sistema.de.agenda.estudantil.para.aux\u00edlio.no.desempenho.acad\u00eamico.SistemaDeAgendaEstudantilParaAux\u00edlioNoDesempenhoAcad\u00eamico
+main.class=Gui.SistemaDeAgendaEstudantilParaAux\u00edlioNoDesempenhoAcad\u00eamico
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
