--- a/build.xml
+++ b/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Sistema_de_Agenda_Estudantil_para_Auxílio_no_Desempenho_Acadêmico" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Sistema de Agenda Estudantil para Auxílio no Desempenho Acadêmico.</description>
+<project name="Sistema_de_Agenda_Estudantil" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Sistema de Agenda Estudantil.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -59,7 +59,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Sistema_de_Agenda_Estudantil_para_Auxílio_no_Desempenho_Acadêmico-impl.jar">
+        <target name="run" depends="Sistema_de_Agenda_Estudantil-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
