--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -22,7 +22,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Sistema_de_Agenda_Estudantil_para_Aux_lio_no_Desempenho_Acad_mico.jar
+dist.jar=${dist.dir}/Sistema_de_Agenda_Estudantil.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
@@ -51,7 +51,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Gui.SistemaDeAgendaEstudantilParaAux\u00edlioNoDesempenhoAcad\u00eamico
+main.class=gui.SistemaDeAgendaEstudantilInterface
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
